tests/baselines/reference/genericRecursiveImplicitConstructorErrors2.errors.txt
genericRecursiveImplicitConstructorErrors2.ts(20,7): error TS2322: Type 'undefined' is not assignable to type 'PullTypeSymbol<A, B, C>'.


==== genericRecursiveImplicitConstructorErrors2.ts (1 errors) ====
    namespace TypeScript2 {
      export interface DeclKind { };
      export interface PullTypesymbol { };
      export interface SymbolLinkKind { };
      export enum PullSymbolVisibility {
        Private,
        Public
      }
    　
      export class PullSymbol {
        constructor (name: string, declKind: DeclKind) {
    
        }
        // link methods
        public addOutgoingLink<A,B,C>(linkTo: PullSymbol, kind: SymbolLinkKind) {
    
        }
    
        public getType<A,B,C>(): PullTypeSymbol<A,B,C> {
          return undefined;
          ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'PullTypeSymbol<A, B, C>'.
        }
      }
      export class PullTypeSymbol <A,B,C>extends PullSymbol {
      }
    }
    